--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: configviagit
+  name: configviagit1
  
 data:
   # property-like keys; each key maps to a simple value
