--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: configviagit112
-  namespace: poc-dev
+  namespace: sample-app-1-non-prod
  
 data:
   # property-like keys; each key maps to a simple value
