--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: configviagit112
+  name: configmap-01
   namespace: sample-app-1-non-prod
  
 data:
