--- a/secret.yml
+++ b/secret.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysqlsecret2
-  namespace: poc-dev
+  name: secret-01
+  namespace:sample-app-1-non-prod
 type: Opaque
 data:
   property_file.yml: |
