--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: configmap-01
-  namespace: sample-app-1-non-prod
+  namespace: dev
  
 data:
   # property-like keys; each key maps to a simple value
