--- a/secret.yml
+++ b/secret.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: secret-01
-  namespace: sample-app-1-non-prod
+  namespace: dev
 type: Opaque
 data:
   property_file.yml: |
